--- a/css/components/composition.css
+++ b/css/components/composition.css
@@ -5,7 +5,7 @@
     position: absolute;
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .4);
-    border-radius: 2px;
+    border-radius: 10rem;
     z-index: 5;
     transition: all .2s;
     outline-offset: 1.5rem;
